force-app/main/default/objects/Membership_Code__c/Membership_Code__c.object-meta.xml
<CustomObject>
    <label>Membership Code</label>
    <nameField>
        <label>Membership Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Membership Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>