force-app/main/default/objects/Membership_Code__c/fields/Membership_Cost__c.field-meta.xml
<CustomField>
    <fullName>Membership_Cost__c</fullName>
    <label>Membership Cost</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>