force-app/main/default/objects/Membership_Code__c/fields/Membership_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Membership_Type_Name__c</fullName>
    <label>Membership Type (Name)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>