force-app/main/default/objects/Membership_Code__c/fields/Show_in_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Show_in_Picklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show in New Membership Picklist</label>
    <type>Checkbox</type>
</CustomField>